@@ -1,5 +1,8 @@
 Release CMTK-1.2.2:
 
+- Improved: "imagemath" can now set, unset, and change padding value
+    repeatedly, so different images can be read with different padding values
+    (Issue #4597)
 - Improved: better separation of code for DICOM vs non-DICOM configuration.
 - Improved: code for PGM output (8 and 16 bit) now more consistent and less
     complex. Also unified API for 8bit  and 16bit write functions.
